--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ code {
   margin-right: 25px;
   height: 40px;
 }
-p{
+.number{
   width: 45px;
   font-size: 1.5rem;
   margin-top: 0;
@@ -111,4 +111,11 @@ h1{
 
 .description{
   width: 50%;
+}
+
+.imgLogin{
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
 }
