--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,37 +1,93 @@
-.imgCart{
-    width: 30%;
-    height: 60%;
-    margin-right: 10px;
-}
-ul{
-    padding-left: 0% !important;
 
+@media screen and (min-width:300px) {
+    .imgCart{
+        width: 15%;
+        margin-right: 10px;
+        height: 20%;
+        border-radius: 4px;
+    }
+    ul{
+        padding-left: 0% !important;
+    
+    }
+    
+    li{
+        padding: 10px;
+        background-color: #D4BAA1 ;
+        margin-bottom: 10px;
+        border-radius: 4px;
+    }
+    
+    .buttoncart{
+        padding: 3px;
+        background-color: #fff ;
+        color: #114E29;
+        font-weight: bold;
+        border-color: #114E29;
+        border-radius: 4px;
+    }
+    
+    .nombre{
+        margin-right: 2%;
+    }
+    
+    .eliminar{
+        width: 29px;
+        height: 29px;
+    }
+    .margin{
+        margin-right: 10px;
+        margin-top: 10px;
+    }
+    
+    .alinearCart{
+        display: flex;
+    }
+    
+    .title{
+        display: flex;
+        justify-content: center;
+        margin-bottom: 2em;
+        font-weight: bold;
+    }
+    .colum{
+        width: 100%;
+    }
+    .flex{
+        display: flex;
+        justify-content: space-around;
+    }
+    .flexRes{
+        display: flex;
+        justify-content: space-around;
+    }
 }
 
-li{
-    padding: 10px;
-    background-color: #D4BAA1 ;
-    margin-bottom: 10px;
-    border-radius: 4px;
+
+@media screen and (min-width:600px) {
+    .flex{
+        display: flex;
+        justify-content: space-between;
+    }
+    .flexRes{
+        display: flex;
+        justify-content: flex-start;
+    }
 }
 
-.eliminar{
-    width: 50px;
-    height: 50px;
-}
-.margin{
-    margin-right: 10px;
-    margin-top: 10px;
-}
-
-.alinearCart{
-    display: flex;
-    justify-content: center;
-}
-
-.title{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 2em;
-    font-weight: bold;
+@media screen and (min-width:1200px) {
+    .tamañoDesktop{
+        display: flex;
+        justify-content: space-evenly;
+    }
+    li{
+        width: 60%;
+    }
+    .colum2{
+        background-color:#6A947A ;
+        width: 36%;
+        height: 100%;
+        padding: 2em;
+        border-radius: 4px;
+    }
 }
